.provarCaches/00D410000011HE0EAM/objects/rstk__icclocktxn__c.object
<CustomObject>
    <description>icclocktxn__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>TEXT(ROUND(rstk__icclocktxn_syusr__r.rstk__syusr_clockno__c, 0)) &amp; &apos;_&apos; &amp; TEXT( rstk__icclocktxn_timein__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>TEXT(ROUND(rstk__icclocktxn_syusr__r.rstk__syusr_clockno__c,0)) &amp; &apos;_&apos; &amp;  TEXT(rstk__icclocktxn_timein__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>null</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icclocktxn_actlabrate__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Labor Rate</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icclocktxn_approved__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__icclocktxn_booktype__c</fullName>
        <label>Booking Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Labor</fullName>
                </value>
                <value>
                    <fullName>Machine</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__icclocktxn_clockno__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Clock Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icclocktxn_date__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Date Entered</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rstk__icclocktxn_div__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>Employee Clock Transactions</relationshipLabel>
        <relationshipName>icclocktxns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icclocktxn_hours__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Hours</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icclocktxn_sessionid__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Session ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icclocktxn_syusr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Employee</label>
        <referenceTo>rstk__syusr__c</referenceTo>
        <relationshipLabel>Employee Clock Transactions</relationshipLabel>
        <relationshipName>icclocktxns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icclocktxn_tapaytype__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Labor Pay Type</label>
        <referenceTo>rstk__tapaytype__c</referenceTo>
        <relationshipLabel>Employee Clock Transactions</relationshipLabel>
        <relationshipName>icclocktxns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icclocktxn_timein__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Time In</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rstk__icclocktxn_timeout__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Time Out</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rstk__icclocktxn_txndate__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Employee Clock Transaction</label>
    <listViews>
        <fullName>rstk__Clock_Transaction_Header</fullName>
        <columns>NAME</columns>
        <columns>rstk__icclocktxn_div__c</columns>
        <columns>rstk__icclocktxn_booktype__c</columns>
        <columns>rstk__icclocktxn_clockno__c</columns>
        <columns>rstk__icclocktxn_date__c</columns>
        <columns>rstk__icclocktxn_syusr__c</columns>
        <columns>rstk__icclocktxn_timein__c</columns>
        <columns>rstk__icclocktxn_timeout__c</columns>
        <columns>rstk__icclocktxn_hours__c</columns>
        <columns>rstk__icclocktxn_tapaytype__c</columns>
        <columns>rstk__icclocktxn_actlabrate__c</columns>
        <columns>rstk__icclocktxn_txndate__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Clock Transaction Header</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__RS_Clock_Transaction_Header</fullName>
        <columns>NAME</columns>
        <columns>rstk__icclocktxn_div__c</columns>
        <columns>rstk__icclocktxn_sessionid__c</columns>
        <columns>rstk__icclocktxn_approved__c</columns>
        <columns>rstk__icclocktxn_clockno__c</columns>
        <columns>rstk__icclocktxn_date__c</columns>
        <columns>rstk__icclocktxn_syusr__c</columns>
        <columns>rstk__icclocktxn_tapaytype__c</columns>
        <columns>rstk__icclocktxn_timein__c</columns>
        <columns>rstk__icclocktxn_timeout__c</columns>
        <columns>rstk__icclocktxn_hours__c</columns>
        <columns>rstk__icclocktxn_txndate__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Clock Transaction Header</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__bccClock_Transaction_Header</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>rstk__icclocktxn_div__c</columns>
        <columns>rstk__icclocktxn_sessionid__c</columns>
        <columns>rstk__icclocktxn_approved__c</columns>
        <columns>rstk__icclocktxn_clockno__c</columns>
        <columns>rstk__icclocktxn_date__c</columns>
        <columns>rstk__icclocktxn_syusr__c</columns>
        <columns>rstk__icclocktxn_timein__c</columns>
        <columns>rstk__icclocktxn_timeout__c</columns>
        <columns>rstk__icclocktxn_hours__c</columns>
        <columns>rstk__icclocktxn_tapaytype__c</columns>
        <columns>rstk__icclocktxn_actlabrate__c</columns>
        <columns>rstk__icclocktxn_txndate__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstk__icclocktxn_div__c</field>
            <operation>contains</operation>
            <value>Suruchi-Division1</value>
        </filters>
        <label>bccClock Transaction Header</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employee Clock Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>